fix: Alignment issue in /onelink when sidebar is open

--- a/src/components/Investor/OneLink/ShareLink/ShareLink.scss
+++ b/src/components/Investor/OneLink/ShareLink/ShareLink.scss
@@ -1,6 +1,6 @@
 .ShareLink_container {
   .box_container {
-    width: 750px;
+    max-width: 750px;
     // height: 411px;
     background-color: #fff;
     padding: 10px;
